[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "folium>=0.19.4",
    "openai>=1.61.1",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.37",
    "streamlit-folium>=0.24.0",
    "streamlit>=1.42.0",
    "trafilatura>=2.0.0",
    "twilio>=9.4.4",
    "geopy>=2.4.1",
    "numpy>=2.2.2",
]
